--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ header{
 h1{
     font-size: 9.6rem;
     font-weight: 900;
-    letter-spacing: 36%;
+    letter-spacing: 3.6rem;
     color: #ffffff;
 
     margin: 0;
@@ -59,12 +59,30 @@ h2{
     font-weight: 100;
     letter-spacing: 5.5%;
     line-height: 60px;
+    text-align: end;
+}
+
+.conteneur1 article{
+    display: flex;
+    align-items: center;
+
+    padding: 10px 50px 10px 50px;
 }
 
 .conteneur1 p{
     font-family: "Quicksand", serif;
     font-size: 3.6rem;
-    margin: 0;
+    margin: 0; 
+    padding-left: 50px;
+}
+
+.conteneur1 .droite p{
+    order: -1;
+    padding-right: 50px;
+}
+
+.conteneur1 .droite article {
+    
 }
 
 .rond{
@@ -83,6 +101,11 @@ h2{
     align-items: center;
 }
 
+h3{
+    font-size: 3rem;
+    letter-spacing: 5%;
+}
+
 .conteneur1 article:hover{
     background-color: #BDC3C7;
 }
@@ -92,7 +115,8 @@ h2{
 .info .wrapper{
     display: flex;
     gap: 60px;
-    align-items: .info
+    align-items: self-start;
+    justify-content: space-evenly;
 
     padding: 50px;
 }
@@ -107,17 +131,32 @@ h2{
 footer{
     background-color: #2980B9;
 }
+
+footer .wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 footer p{
     font-weight: 700;
 
     margin: 0;
-    padding-bottom: 40px;
-    padding-top: 40px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 footer .icon{
-    height: 20px;
-    width: 20px;
-
+    color: #000000;
     background-color: #ffffff;
+    text-decoration: none;
+    border: solid 3px #BDC3C7;
+    border-radius: 100%;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 50px;
+    height: 50px;
 }
