--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ header{
 h1{
     font-size: 9.6rem;
     font-weight: 900;
-    letter-spacing: 3.6rem;
+    letter-spacing: 0.33em;
     color: #ffffff;
 
     margin: 0;
@@ -52,14 +52,32 @@ h1{
 
 /* ------ Section 1 ------ */
 
-
 h2{
     font-family: "Lato", serif;
     font-size: 4.8rem;
     font-weight: 100;
-    letter-spacing: 5.5%;
+    letter-spacing: 0.07em;
     line-height: 60px;
     text-align: end;
+
+    margin: 0;
+}
+
+.citation{
+    padding-top: 50px;
+}
+
+.Elsa{
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
+section .info{
+    padding-top: 100px;
+}
+
+.conteneur1{
+    gap: 10px;
 }
 
 .conteneur1 article{
@@ -67,6 +85,7 @@ h2{
     align-items: center;
 
     padding: 10px 50px 10px 50px;
+    margin-top: 10px;
 }
 
 .conteneur1 p{
@@ -81,8 +100,8 @@ h2{
     padding-right: 50px;
 }
 
-.conteneur1 .droite article {
-    
+.conteneur1 .droite{
+    justify-content: end;
 }
 
 .rond{
@@ -103,7 +122,7 @@ h2{
 
 h3{
     font-size: 3rem;
-    letter-spacing: 5%;
+    letter-spacing: 0.05em;
 }
 
 .conteneur1 article:hover{
@@ -113,12 +132,11 @@ h3{
 /* ------ Section 2 ------ */
 
 .info .wrapper{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 60px;
-    align-items: self-start;
-    justify-content: space-evenly;
 
-    padding: 50px;
+    padding: 30px 50px 50px 50px;
 }
 
 .info p{
@@ -152,6 +170,7 @@ footer .icon{
     text-decoration: none;
     border: solid 3px #BDC3C7;
     border-radius: 100%;
+
     
     display: flex;
     align-items: center;
